--- a/Site_Honkai/Itens/credito.html
+++ b/Site_Honkai/Itens/credito.html
@@ -8,11 +8,11 @@
   <h1>Crédito</h1>
   
   <div class="item">
-    <img src="/Site_Honkai/Art_Icon/Item_Credit.webp" alt="Imagem do item">
+    <img src="../Art_Icon/Item_Credit.webp" alt="Imagem do item">
     <h2>Descrição do item:</h2>
     <p>"As pessoas correm brigando e trocando números em um terminal, mas o que é verdadeiramente precioso não pode ser comprado."</p>
     <p></p>
-    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="/Site_Honkai/Art_Icon/Icon_3_Stars.webp" class="lazyloaded"></h3>
+    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="../Art_Icon/Icon_3_Stars.webp" class="lazyloaded"></h3>
     <h2>Descrição</h2>
     <p>
         Essa moeda, usada pela Interastral Peace Corporation para acertar contas com seus clientes, agora é amplamente aceita como moeda forte para viagens espaciais.</p>
