--- a/Site_Honkai/caminhos/preservacao.html
+++ b/Site_Honkai/caminhos/preservacao.html
@@ -64,7 +64,7 @@
             <td>
               <span style="white-space:nowrap;">
                 <section id="Foto">
-                    <img id="path-image" alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Preservation.webp" class="lazyloaded">
+                    <img id="path-image" alt="Path The Preservation" src="../Art_splash/Path_The_Preservation.webp" class="lazyloaded">
             </section>
               </span>
             </td>
