--- a/Site_Honkai/Itens/Jade_Estelar.html
+++ b/Site_Honkai/Itens/Jade_Estelar.html
@@ -8,11 +8,11 @@
   <h1>Jade Estelar</h1>
   
   <div class="item">
-    <img src="/Site_Honkai/Art_splash/Item_Stellar_Jade.webp" alt="Imagem do item">
+    <img src="../Art_splash/Item_Stellar_Jade.webp" alt="Imagem do item">
     <h2>Descrição do item:</h2>
     <p>"Alguns dizem que as luzes são desejos de seres sencientes. Embora insignificantes e indescritíveis, elas iluminaram o céu ao seu redor, certo?"</p>
     <p>Stellar Jade é a moeda premium usada em Honkai: Star Rail . Ele pode ser usado para comprar Star Rail Pass e Star Rail Special Pass na Loja ou no Menu Warp por 160 Stellar Jade cada.</p>
-    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="/Site_Honkai/Art_Icon/Icon_5_Stars.webp" class="lazyloaded"></h3>
+    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="../Art_Icon/Icon_5_Stars.webp" class="lazyloaded"></h3>
     <h2>Descrição</h2>
     <p>Um brilho fugaz atravessando o céu noturno. Pegue antes que acabe. Talvez possa ser usado para troca?</p>
     <h2>Como obter:</h2>
