--- a/Site_Honkai/Itens/brasas_imortais.html
+++ b/Site_Honkai/Itens/brasas_imortais.html
@@ -8,11 +8,11 @@
   <h1>Brasas Imortais</h1>
   
   <div class="item">
-    <img src="/Site_Honkai/Art_Icon/Item_Undying_Embers.webp" alt="Imagem do item">
+    <img src="../Art_Icon/Item_Undying_Embers.webp" alt="Imagem do item">
     <h2>Descrição do item:</h2>
     <p>Brasas Imortais pode ser usado no Embers Exchange para comprar itens como Passe Especial Star Rail ,Star Rail Pass,Rastros do Destino e vários materiais de aprimoramento.</p>
     <p></p>
-    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="/Site_Honkai/Art_Icon/Icon_4_Stars.webp" class="lazyloaded"></h3>
+    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="../Art_Icon/Icon_4_Stars.webp" class="lazyloaded"></h3>
     <h2>Descrição</h2>
     <p>
         Cinzas frias de uma estrela cadente caíram do céu.
