--- a/Site_Honkai/Itens/luz_estelar.html
+++ b/Site_Honkai/Itens/luz_estelar.html
@@ -8,11 +8,11 @@
   <h1>Luz Estelar Imortal</h1>
   
   <div class="item">
-    <img src="/Site_Honkai/Art_Icon/Item_Undying_Starlight.webp" alt="Imagem do item">
+    <img src="../Art_Icon/Item_Undying_Starlight.webp" alt="Imagem do item">
     <h2>Descrição do item:</h2>
     <p>Luz Estelar Imortal pode ser usado no Starlight Exchange para comprar Passe Especial Star Rail ,Star Rail Pass , personagens selecionados de 4 estrelas e cones de luz de 5 estrelas .</p>
     <p></p>
-    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="/Site_Honkai/Art_Icon/Icon_5_Stars.webp" class="lazyloaded"></h3>
+    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="../Art_Icon/Icon_5_Stars.webp" class="lazyloaded"></h3>
     <h2>Descrição</h2>
     <p>
         Gemas esplêndidas se formaram quando uma estrela cadente caiu do céu.
