--- a/Site_Honkai/Itens/special_star_pass.html
+++ b/Site_Honkai/Itens/special_star_pass.html
@@ -8,11 +8,11 @@
   <h1>Passe Especial Star Rail</h1>
   
   <div class="item">
-    <img src="/Site_Honkai/Art_Icon/Item_Star_Rail_Special_Pass.webp" alt="Imagem do item">
+    <img src="../Art_Icon/Item_Star_Rail_Special_Pass.webp" alt="Imagem do item">
     <h2>Descrição do item:</h2>
     <p>Precisa conversar com um velho amigo? Suba e veja o universo com ele/ela/eles/elas!</p>
     <p>Star Rail Pass é um item consumível que pode ser usado para Stellar Warp e Departure Warp .</p>
-    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="/Site_Honkai/Art_Icon/Icon_5_Stars.webp" class="lazyloaded"></h3>
+    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="../Art_Icon/Icon_5_Stars.webp" class="lazyloaded"></h3>
     <h2>Descrição</h2>
     <p>
         Bilhete direto para o Expresso Astral com coordenadas de mundos específicos, indicado para passageiros que desejam apenas ir do ponto A ao ponto B.</p>
