--- a/Site_Honkai/Itens/star_rail_pass.html
+++ b/Site_Honkai/Itens/star_rail_pass.html
@@ -8,11 +8,11 @@
   <h1>Passe Star Rail</h1>
   
   <div class="item">
-    <img src="/Site_Honkai/Art_Icon/Item_Star_Rail_Pass.webp" alt="Imagem do item">
+    <img src="../Art_Icon/Item_Star_Rail_Pass.webp" alt="Imagem do item">
     <h2>Descrição do item:</h2>
     <p>Mapeie mundos, conheça pessoas, crie memórias.</p>
     <p>Star Rail Pass é um item consumível que pode ser usado para Stellar Warp e Departure Warp .</p>
-    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="/Site_Honkai/Art_Icon/Icon_5_Stars.webp" class="lazyloaded"></h3>
+    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="../Art_Icon/Icon_5_Stars.webp" class="lazyloaded"></h3>
     <h2>Descrição</h2>
     <p>Passe Universal Expresso Astral. Viaje até onde o Star Rail se estende.</p>
     <h2>Como obter:</h2>
