--- a/Site_Honkai/caminhos/abundancia.html
+++ b/Site_Honkai/caminhos/abundancia.html
@@ -63,7 +63,7 @@
             <td>
               <span style="white-space:nowrap;">
                 <section id="Foto">
-                    <img id="path-image" alt="Path The Abundance" src="/Site_Honkai/Art_splash/Path_The_Abundance.webp" class="lazyloaded">
+                    <img id="path-image" alt="Path The Abundance" src="../Art_splash/Path_The_Abundance.webp" class="lazyloaded">
             </section>
               </span>
             </td>
