--- a/Site_Honkai/caminhos/destruicao.html
+++ b/Site_Honkai/caminhos/destruicao.html
@@ -64,7 +64,7 @@
             <td>
               <span style="white-space:nowrap;">
                 <section id="Foto">
-                    <img id="path-image" alt="Path The Destruction" src="/Site_Honkai/Art_splash/Path_The_Destruction.webp" class="lazyloaded">
+                    <img id="path-image" alt="Path The Destruction" src="../Art_splash/Path_The_Destruction.webp" class="lazyloaded">
             </section>
               </span>
             </td>
