--- a/Site_Honkai/caminhos/inexistencia.html
+++ b/Site_Honkai/caminhos/inexistencia.html
@@ -63,7 +63,7 @@
             <td>
               <span style="white-space:nowrap;">
                 <section id="Foto">
-                    <img id="path-image" alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Nihility.webp" class="lazyloaded">
+                    <img id="path-image" alt="Path The Preservation" src="../Art_splash/Path_The_Nihility.webp" class="lazyloaded">
             </section>
               </span>
             </td>
