--- a/Site_Honkai/personagens/trailblazer.html
+++ b/Site_Honkai/personagens/trailblazer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title></title>
+  <title>TrailBlazer</title>
 <head>
 <link rel="stylesheet" type="text/css" href="trailblazer.css">
 </head>
