--- a/Site_Honkai/personagens/luocha.html
+++ b/Site_Honkai/personagens/luocha.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title></title>
+  <title>Luocha</title>
 <head>
 <link rel="stylesheet" type="text/css" href="personagens.css">
 </head>
