--- a/Site_Honkai/caminhos/destruicao.html
+++ b/Site_Honkai/caminhos/destruicao.html
@@ -111,27 +111,27 @@
     <div class="description">
       <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" >Selecione para onde deseja voltar</a></font></font></i>
           <ul>
-              <li>
-                  <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
-              </li>
-              <li>
-                  <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
-              </li>
-              <li>
-                  <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
-              </li>
-              <li>
-                  <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
-              </li>
-              <li>
-                  <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
-              </li>
-              <li>
-                  <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
-              </li>
-              <li>
-                  <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
-              </li>
+            <li>
+              <a href="../site.html#sobre" style="color: #ad861b;">Sobre</a>
+          </li>
+          <li>
+              <a href="../site.html#obtencao"style="color: #ad861b;">Obtenção</a>
+          </li>
+          <li>
+              <a href="../site.html#progressao"style="color: #ad861b;">Progressão</a>
+          </li>
+          <li>
+              <a href="../site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
+          </li>
+          <li>
+              <a href="../site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
+          </li>
+          <li>
+              <a href="../site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+          </li>
+          <li>
+              <a href="../site.html#contato"style="color: #ad861b;">Contato</a>
+          </li>
           </ul>
       </div>
   </div>
