--- a/Site_Honkai/personagens/dan_shu.html
+++ b/Site_Honkai/personagens/dan_shu.html
@@ -27,25 +27,25 @@
         <div class="description">
                                     <ul>
                                         <li>
-                                            <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
+                                            <a href="../site.html#sobre" style="color: #ad861b;">Sobre</a>
                                         </li>
                                         <li>
-                                            <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
+                                            <a href="../site.html#obtencao"style="color: #ad861b;">Obtenção</a>
                                         </li>
                                         <li>
-                                            <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
+                                            <a href="../site.html#progressao"style="color: #ad861b;">Progressão</a>
                                         </li>
                                         <li>
-                                            <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
+                                            <a href="../site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
                                         </li>
                                         <li>
-                                            <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
+                                            <a href="../site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
                                         </li>
                                         <li>
-                                            <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+                                            <a href="../site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
                                         </li>
                                         <li>
-                                            <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
+                                            <a href="../site.html#contato"style="color: #ad861b;">Contato</a>
                                         </li>
                                     </ul>
                                 </div>
