--- a/Site_Honkai/site.html
+++ b/Site_Honkai/site.html
@@ -428,9 +428,9 @@
         </td>
         <td><span class="colorful-text">✦ ✦ ✦ ✦ ✦</span></td>
         </td>
-        <td>Adaptive
+        <td>Adaptável
         </td>
-        <td>Adaptive
+        <td>Adaptável
         </td></tr>
         <tr>
         <td><a href="./personagens/welt.html" title="Welt"><img alt="Character Welt Icon" src="./Art_Icon/Character_Welt_Icon.webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Welt Icon.png" data-image-key="Character_Welt_Icon.png" data-src=".ic.wikia.nocookie.net/houkai-star-rail/images/1/11/Character_Welt_Icon.png/revision/latest/scale-to-width-down/40?cb=20220608113741" class=" lazyloaded"></a>
@@ -633,7 +633,6 @@
                 </li>
             </ul>
         </div>
-    </section>
     <section id="creditos">
         <div>
             <h3>Todos estes dados foram tirados deste site</h3>
